--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
         <div class="card-grid">
           <div class="card">
   <img src="https://i.scdn.co/image/ab67616d0000b27302e8d1d5244b7f48a0d9e7f8" alt="Chappell Roan - The Subway">
-  <h3>The Subway</h3>
-  <p>Chappell Roan</p>
+  <h3>Test one</h3>
+  <p>Test artist one</p>
 </div>
 
 <div class="card">
   <img src="https://i.scdn.co/image/ab67616d0000b273edbc64564642f9461ac2cfb7" alt="Dazey and the Scouts - Maggot">
-  <h3>Maggot</h3>
-  <p>Dazey and the Scouts</p>
+  <h3>test two</h3>
+  <p>Test artist two</p>
 </div>
 
 <div class="card">
   <img src="https://i.scdn.co/image/ab67616d0000b273b1b86e43d02f34ebac5fafd7" alt="KARMA OST">
-  <h3>KARMA OST</h3>
-  <p>VIVINOS</p>
+  <h3>test three</h3>
+  <p>test artist three</p>
 </div>
         </div>
       </section>
