--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
         <h2>Recently Played</h2>
         <div class="card-grid">
           <div class="card">
-  <img src="https://i.scdn.co/image/ab67616d0000b27302e8d1d5244b7f48a0d9e7f8" alt="Chappell Roan - The Subway">
+  <img src="https://i.scdn.co/image/ab67616d0000b27302e8d1d5244b7f48a0d9e7f8" alt="TEST OST ONE">
   <h3>Test one</h3>
   <p>Test artist one</p>
 </div>
 
 <div class="card">
-  <img src="https://i.scdn.co/image/ab67616d0000b273edbc64564642f9461ac2cfb7" alt="Dazey and the Scouts - Maggot">
+  <img src="https://i.scdn.co/image/ab67616d0000b273edbc64564642f9461ac2cfb7" alt="TEST OST TWO">
   <h3>test two</h3>
   <p>Test artist two</p>
 </div>
 
 <div class="card">
-  <img src="https://i.scdn.co/image/ab67616d0000b273b1b86e43d02f34ebac5fafd7" alt="KARMA OST">
+  <img src="https://i.scdn.co/image/ab67616d0000b273b1b86e43d02f34ebac5fafd7" alt="TEST OST THREE">
   <h3>test three</h3>
   <p>test artist three</p>
 </div>
