--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- Bottom bar -->
     <footer class="now-playing">
       <div class="track-info">
-        <strong>The Subway</strong> - Chappell Roan
+        <strong>Test one</strong> - Test artist one
       </div>
       <div class="player-controls">
         ⏮️ ⏯️ ⏭️
